complex/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      # Key-value pair that's up to you, like:
      # partOfApp: postgres
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes: 
        - name: postgres-storage
          persistentVolumeClaim:
            # This must be identical to that "database-persistence-volume-claim.yaml" file
            claimName: database-persistence-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            # Default port of postgres
            - containerPort: 5432
          volumeMounts:
              # Match the name in "spec.volumes"
            - name: postgres-storage
              # Where Postgres stores the data in the container hard drive.
              # This is the default volume path of Postgres
              mountPath: /var/lib/postgresql/data
              # * Additional option for Postgres only
              # This means that data saved in "mountPath", will be stored inside
              # the folder specified by "subPath" in the persistent volume
              subPath: postgres
          # Environment variables
