complex/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      # Key-value pair that's up to you, like:
      # partOfApp: api
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: stephengrider/multi-server
          ports:
            # "5000" is hardcoded in the ExpressJS app
            - containerPort: 5000
          # Environment variables
