complex/k8s/postgress-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    # Comparing to NodePort
    # A "ClusterIP" has NO "nodePort" property
    - port: 5432
      targetPort: 5432
