complex/k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    # Comparing to NodePort
    # A "ClusterIP" has NO "nodePort" property

      # Any service outside will connect to
    - port: 6379
      # What port the container is listening to
      targetPort: 6379
